@@ -1,3 +1,10 @@
+Tue May  7 23:27:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* Makefile.am (stdlib_src): Build realpath for SCL as well.
+	* include/stdlib.h (realpath): Declare for SCL.
+	* stdlib/realpath.c (realpath): Support NULL output buffer.  Support
+	symlinks.  Return ENOENT when canonicalisation fails.  Support SCL.
+
 Wed May  1 15:27:44 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* include/limits.h (PATH_MAX): Increased to 1024.
